Student team page alignment fixed

--- a/assets/css/student_team_style.css
+++ b/assets/css/student_team_style.css
@@ -49,13 +49,18 @@ p {
     box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.1);
     background-color: white;
     margin-bottom: 10px;
-    margin-left: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .single-team:hover .social {
     cursor: pointer;
     opacity: 1;
     transform: rotateY(0deg) scale(1, 1);
+}
+
+.space-evenly {
+    justify-content: space-evenly !important;
 }
 
 .img-area {
